<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">"%1$s won't run without Google Play services, which are missing from your device."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">"%1$s won't run without Google Play services, which are not supported by your device."</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="fcm_fallback_notification_channel_label">Miscellaneous</string>
    <string name="search_menu_title">Search</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="hockeyapp_crash_dialog_app_name_fallback">This app</string>
    <string name="hockeyapp_crash_dialog_message">Would you like to send an anonymous report so we can fix the problem?</string>
    <string name="hockeyapp_crash_dialog_negative_button">"Don't Send"</string>
    <string name="hockeyapp_crash_dialog_neutral_button">Always Send</string>
    <string name="hockeyapp_crash_dialog_positive_button">Send Report</string>
    <string name="hockeyapp_crash_dialog_title">%s Unexpectedly Quit</string>
    <string name="hockeyapp_dialog_error_message">An error has occurred</string>
    <string name="hockeyapp_dialog_error_title">Error</string>
    <string name="hockeyapp_dialog_negative_button">Cancel</string>
    <string name="hockeyapp_dialog_positive_button">OK</string>
    <string name="hockeyapp_download_failed_dialog_message">The update could not be downloaded. Would you like to try again?</string>
    <string name="hockeyapp_download_failed_dialog_negative_button">Cancel</string>
    <string name="hockeyapp_download_failed_dialog_positive_button">Retry</string>
    <string name="hockeyapp_download_failed_dialog_title">Download Failed</string>
    <string name="hockeyapp_error_no_network_message">Your device is not connected to the internet. Please resolve connectivity issues and try again.</string>
    <string name="hockeyapp_expiry_info_text">%s has expired. Please check HockeyApp for any updates.</string>
    <string name="hockeyapp_expiry_info_title">Build Expired</string>
    <string name="hockeyapp_feedback_attach_file">Attach File</string>
    <string name="hockeyapp_feedback_attach_picture">Attach Picture</string>
    <string name="hockeyapp_feedback_attachment_button_text">Add Attachment</string>
    <string name="hockeyapp_feedback_attachment_error">Error</string>
    <string name="hockeyapp_feedback_attachment_loading">Loading…</string>
    <string name="hockeyapp_feedback_email_hint">Email</string>
    <string name="hockeyapp_feedback_email_hint_required">Email (required)</string>
    <string name="hockeyapp_feedback_failed_text">Would you like to send your feedback again?</string>
    <string name="hockeyapp_feedback_failed_title">Pending</string>
    <string name="hockeyapp_feedback_fetching_feedback_text">Retrieving discussions…</string>
    <string name="hockeyapp_feedback_generic_error">An error has occurred</string>
    <string name="hockeyapp_feedback_last_updated_text">Last Updated: %s</string>
    <string name="hockeyapp_feedback_max_attachments_allowed">Only %s attachments allowed.</string>
    <string name="hockeyapp_feedback_message_hint">Message</string>
    <string name="hockeyapp_feedback_message_hint_required">Message (required)</string>
    <string name="hockeyapp_feedback_name_hint">Name</string>
    <string name="hockeyapp_feedback_name_hint_required">Name (required)</string>
    <string name="hockeyapp_feedback_refresh_button_text">Refresh</string>
    <string name="hockeyapp_feedback_response_button_text">Add a Response</string>
    <string name="hockeyapp_feedback_select_file">Select File</string>
    <string name="hockeyapp_feedback_select_picture">Select Picture</string>
    <string name="hockeyapp_feedback_send_button_text">Send Feedback</string>
    <string name="hockeyapp_feedback_send_generic_error">"Message couldn't be posted. Please check your input values and your connection, then try again."</string>
    <string name="hockeyapp_feedback_send_network_error">No response from server. Please check your connection, then try again.</string>
    <string name="hockeyapp_feedback_sending_feedback_text">Sending feedback…</string>
    <string name="hockeyapp_feedback_subject_hint">Subject</string>
    <string name="hockeyapp_feedback_subject_hint_required">Subject (required)</string>
    <string name="hockeyapp_feedback_title">Feedback</string>
    <string name="hockeyapp_feedback_validate_email_empty">Please enter an email address</string>
    <string name="hockeyapp_feedback_validate_email_error">Please enter a valid email address</string>
    <string name="hockeyapp_feedback_validate_name_error">Please enter your name</string>
    <string name="hockeyapp_feedback_validate_subject_error">Please enter a subject</string>
    <string name="hockeyapp_feedback_validate_text_error">"Message couldn't be posted. Please enter a feedback text"</string>
    <string name="hockeyapp_login_email_hint">Email</string>
    <string name="hockeyapp_login_email_hint_required">Email (required)</string>
    <string name="hockeyapp_login_headline_text">"Please enter your HockeyApp account's email address and password to authorize access to this app."</string>
    <string name="hockeyapp_login_headline_text_email_only">"Please enter your HockeyApp account's email address to authorize access to this app."</string>
    <string name="hockeyapp_login_login_button_text">Login</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_confirm">Confirm</string>
    <string name="action_continue">continue</string>
    <string name="action_done">Done</string>
    <string name="action_next">Next</string>
    <string name="action_remove">Remove</string>
    <string name="action_save">SAVE</string>
    <string name="hint_booking_number">Booking Number</string>
    <string name="hint_departure_date">Departure Date</string>
    <string name="hint_flight_destination">Flight Destination</string>
    <string name="hint_flight_number">Flight Number</string>
    <string name="hint_flight_origin">Flight Origin</string>
    <string name="hint_passenger_name">Passenger Name</string>
    <string name="hint_seat_number">Seat Number</string>
    <string name="menu_about_us">About Us</string>
    <string name="menu_change_security_code">Change Security Code</string>
    <string name="menu_contact_us">Contact Us</string>
    <string name="menu_edit_profile">Edit Profile</string>
    <string name="menu_feedback">Feedback</string>
    <string name="menu_information">Information</string>
    <string name="menu_privacy_policy">Privacy Policy</string>
    <string name="menu_promo_code">Promo Code</string>
    <string name="msg_boarding_pass_information">Make sure to input your boarding pass data correctly.</string>
    <string name="msg_boarding_pass_sync">The name on the boarding pass you first scan will be synchronized with your OVO ID. Be sure not to use a boarding pass with a different name.</string>
    <string name="msg_content_remove_add_card">Are you sure want to remove this card?</string>
    <string name="nominal">Nominal</string>
    <string name="title_about">About</string>
    <string name="title_account">Account</string>
    <string name="title_attention">Attention</string>
    <string name="title_detail">Detail</string>
    <string name="title_redeemed_unit">Redeemed Unit</string>
    <string name="title_security">Security</string>
    <string name="title_sell_information">Sell Information</string>
    <string name="action_next_in">Berikutnya</string>
    <string name="action_sign_out">Sign Out</string>
    <string name="digits_alphabet_with_slash">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ/</string>
    <string name="digits_alphanumeric_no_space">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890</string>
    <string name="digits_name_with_space">"abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ-'"</string>
    <string name="hint_account_name_cam">Nama Pemilik Rekening</string>
    <string name="hint_account_number_cam">Nomor Rekening</string>
    <string name="hint_bank">Nama Bank</string>
    <string name="hint_choose">Pilih</string>
    <string name="hint_choose_bank">Pilih Bank</string>
    <string name="hint_city">Kota</string>
    <string name="hint_correspondence_address">Alamat surat-menyurat</string>
    <string name="hint_district">Kecamatan</string>
    <string name="hint_postal_code">Kode Pos</string>
    <string name="hint_province">Provinsi</string>
    <string name="hint_village">Kelurahan</string>
    <string name="menu_faq">FAQ</string>
    <string name="msg_add_account">Nomor rekening di atas wajib milik nasabah terdaftar</string>
    <string name="msg_correspondence_address">Alamat surat-menyurat sama dengan</string>
    <string name="msg_take_picture_bank_book">"Foto muka buku tabungan/bukti kepemilikan
 rekening Anda"</string>
    <string name="msg_version">Version</string>
    <string name="title_contact_info">Informasi Kontak</string>
    <string name="title_ktp_id">KTP ID</string>
    <string name="title_others_in">Lainnya</string>
</resources>