<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@color/white" android:paddingLeft="@dimen/space_x4" android:paddingTop="@dimen/space_x3" android:paddingRight="@dimen/space_x4" android:paddingBottom="@dimen/space_x5" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <android.support.design.widget.TextInputLayout android:id="@id/field_account_name" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/space_x4" android:hint="@string/hint_account_name_cam">
        <android.support.design.widget.TextInputEditText android:enabled="false" android:id="@id/edit_account_name" android:background="@drawable/background_edit_text_white" android:layout_width="fill_parent" android:layout_height="wrap_content" android:maxLength="@integer/editTextMaxLengthRegistration" android:digits="@string/digits_name_with_space" style="@style/Widget.EditText" />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/space_x4" android:hint="@string/hint_bank">
        <AutoCompleteTextView android:textSize="@dimen/body_text_size" android:id="@id/edit_bank" android:focusableInTouchMode="false" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/hint_choose_bank" style="@style/Widget.AutoCompleteTextView" />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout android:id="@id/field_account_number" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/space_x2" android:hint="@string/hint_account_number_cam">
        <android.support.design.widget.TextInputEditText android:id="@id/edit_account_number" android:layout_width="fill_parent" android:layout_height="wrap_content" android:maxLength="20" android:digits="\ 0123456789" android:inputType="phone" android:imeOptions="actionNext" android:imeActionLabel="@string/action_next" style="@style/Widget.EditText" />
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/space_x2" android:text="@string/msg_add_account" android:maxLines="2" style="@style/TextAppearance.Display.Regular" />
    </android.support.design.widget.TextInputLayout>
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <ImageView android:layout_gravity="center_horizontal" android:id="@id/image_camera" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/space_x2" app:srcCompat="@drawable/ic_camera_box_tall" />
        <TextView android:textColor="@color/dusk" android:gravity="center" android:layout_gravity="center_horizontal" android:id="@id/text_take_picture" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/space_x3_half" android:text="@string/msg_take_picture_bank_book" android:maxLines="2" style="@style/TextAppearance.Body.Regular" />
    </LinearLayout>
    <Button android:enabled="false" android:id="@id/btn_save" android:layout_width="fill_parent" android:layout_height="@dimen/button_height" android:text="@string/action_save" style="@style/Widget.Button.Primary" />
</LinearLayout>