<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:padding="@dimen/space_x4" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textColor="@color/purple" android:id="@id/txt_title_dialog" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/space_x3" android:text="@string/title_attention" style="@style/TextAppearance.H5.Bold" />
    <TextView android:textColor="@color/charcoal" android:id="@id/txt_desc_dialog" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/space_x4" android:text="@string/msg_boarding_pass_sync" android:lineSpacingMultiplier="1.2" style="@style/TextAppearance.Body.Regular" />
    <Button android:id="@id/btn_confirm" android:layout_width="fill_parent" android:layout_height="@dimen/button_height" android:layout_marginBottom="@dimen/space_x2" android:text="@string/action_confirm" style="@style/Widget.Button.Primary" />
    <Button android:id="@id/btn_cancel" android:layout_width="fill_parent" android:layout_height="@dimen/button_height" android:text="@string/action_cancel" style="@style/Widget.Button.Tertiary" />
</LinearLayout>